# cmd/main.go
@@ -3,9 +3,9 @@ package main
 import (
 	"go-api/controller"
 	"go-api/db"
+	_ "go-api/docs" // Importar a documentação Swagger
 	"go-api/repository"
 	"go-api/usecase"
-	_ "go-api/docs" // Importar a documentação Swagger
 
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
@@ -14,7 +14,7 @@ import (
 
 // @title CRUD GoLang API
 // @version 1.0
-// @description API REST em Go seguindo Clean Architecture com CRUD de produtos
+// @description API REST em Go seguindo Clean Architecture com CRUD de produtos e usuários
 // @termsOfService http://swagger.io/terms/
 
 // @contact.name API Support
@@ -30,6 +30,9 @@ import (
 // @tag.name products
 // @tag.description Operações relacionadas a produtos
 
+// @tag.name users
+// @tag.description Operações relacionadas a usuários
+
 // @tag.name health
 // @tag.description Endpoints de verificação de saúde da API
 
@@ -43,12 +46,15 @@ func main() {
 		panic(err)
 	}
 
+	// Product
 	ProductRepository := repository.NewProductRepository(dbConnection)
-	//camada usecase
 	ProductUsecase := usecase.NewProductUsecase(ProductRepository)
-
-	//camada de controllers
 	ProductController := controller.NewProductController(ProductUsecase)
+
+	// User
+	UserRepository := repository.NewUserRepository(dbConnection)
+	UserUsecase := usecase.NewUserUsecase(UserRepository)
+	UserController := controller.NewUserController(UserUsecase)
 
 	// Swagger documentation endpoint
 	server.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
@@ -65,9 +71,17 @@ func main() {
 		ctx.JSON(200, gin.H{"message": "Pong"})
 	})
 
+	// Product routes
 	server.GET("/products", ProductController.GetProducts)
 	server.POST("/product", ProductController.CreateProduct)
 	server.GET("/products/:productId", ProductController.GetProductById)
+
+	// User routes
+	server.POST("/user", UserController.CreateUser)
+	server.GET("/users/:userId", UserController.GetUserByID)
+	server.PUT("/users/:userId", UserController.UpdateUser)
+	server.DELETE("/users/:userId", UserController.DeleteUser)
+	server.GET("/users", UserController.GetUsers)
 
 	server.Run(":8000")
 }
